# LMAo

./: .dockerignore  .env.docker  .env.example  .env.local  .gitignore  CLI_QUICK_START.md  DESIGN_AND_ORGANIZATION.md  DOCKER_DEPLOYMENT.md  Makefile  QUICK_REFERENCE.md  QUICK_SETUP_GUIDE.md  RAG_CLI_README.md  README.md  README_AGENT_CLI.md  SYSTEM_DOCUMENTATION.md  agent_cli.py  agent_interactive_cli.py  check_cache_status.py  clear_cache.py  clear_cache_quick.py  contributions.md  debug_langgraph_stream.py  demo_agentic_system.py  diagnose_test_failures.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  query.py  rag_interactive_cli.py  requirements-dev.txt  requirements.txt  test_agent_integration.py  test_agent_server.py  test_chat_response.py  test_db_quick.py  test_imports.py  test_ingestion.py  test_integrated_system.py  test_integration_simple.py  test_integration_status.py  (+9 more)
.embedding_cache/: embedding_cache.pkl
docker/agent-server/: Dockerfile
docker/api-server/: Dockerfile
docker/postgres/: init.sql
docker/prometheus/: prometheus.yml
docker/rag-pipeline/: Dockerfile
docker/web-ui/: Dockerfile  nginx.conf
docs/: API_REFERENCE.md  Architecture.md  COMPLETE_SYSTEM_OVERVIEW.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  FEATURES_AND_CAPABILITIES.md  INDEX.md  LLM_INTEGRATION.md  QUICK_REFERENCE.md  TECHNICAL_ARCHITECTURE.md
examples/: demo_agentic_system.py  llm_usage_example.py
scripts/: docker-health-check.sh  setup.sh  start.sh
src/: __init__.py  chunking.py  config.py  document_loader.py  indexing.py
src/agent_server/: ARCHITECTURE_DIAGRAM.md  __init__.py  (+17 more)
test_doc/: sample.txt
test_documents/: advanced_concepts.md  code_example.py  configuration.md  sample.txt
tests/: README.md  TEST_SUITE_SUMMARY.md  conftest.py  pytest.ini  requirements-test.txt  run_all_tests.py  test_adaptive_planning.py  test_api_server.py  test_conversational_fixes.py  test_critical_fixes.py  test_orchestrator_enhancements.py  test_tool_registry.py
ui/: .env.development  eslint.config.mts  package-lock.json  package.json
vector_db_store/: chroma.sqlite3
(+155 files in other folders)
